HtGFW_dev/logs/log_1.2.txt
2018-04-26 02:59:01.422339
Traceback (most recent call last):
  File "printChecker_2.py", line 8, in <module>
    check = checker2.check()
NameError: name 'checker2' is not defined
2018-04-26 03:59:01.703364
Traceback (most recent call last):
  File "printChecker_2.py", line 8, in <module>
    check = checker2.check()
NameError: name 'checker2' is not defined
  File "printChecker_2.py", line 7
    print str(now)
        ^
SyntaxError: invalid syntax
  File "printChecker_1.py", line 7
    print str(now)
        ^
SyntaxError: invalid syntax
